--- a/CSS/헝거게임게임화면.css
+++ b/CSS/헝거게임게임화면.css
@@ -39,6 +39,8 @@ header h1, .event-text {
 }
 
 #day-night-display{
+    width: 100%;
+    overflow: hidden;
     text-align: center;
     display: flex;
     font-weight: bold;
@@ -47,6 +49,22 @@ header h1, .event-text {
     align-items: flex-start;
     border: 1px solid white;
     border-radius: 10px;
+}
+
+.night-mode {
+    background: linear-gradient(to bottom right, black, navy);
+    transition: opacity 0.5s ease;
+}
+
+.day-mode {
+    background: linear-gradient(to bottom right, orange, yellow);
+    transition: opacity 0.5s ease;
+}
+
+.day-gradient, .night-gradient {
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.5s ease;
     background: linear-gradient(to bottom right, orange, yellow);
 }
 
@@ -77,6 +95,9 @@ header h1, .event-text {
     color: white;
     background-color: black;
     letter-spacing: 2px;
+    margin-top: 90px;
+    margin-bottom: 160px;
+    padding: 30px;
 }
 
 .event-char{
@@ -122,7 +143,6 @@ header h1, .event-text {
 }
 
 .player-image {
-    border-radius: 50%;
     margin-bottom: 10px;
     border: 1px solid black;
 }
@@ -157,8 +177,3 @@ header h1, .event-text {
     font-family: 'NanumSquareAcb';
 }
 
-#day-night-display.night-mode {
-    background-color: rgba(0, 0, 0, 0.8); /* 어두운 배경 */
-    color: white; /* 텍스트를 흰색으로 변경 */
-    transition: background-color 0.5s ease; /* 부드러운 전환 효과 */
-}
