--- a/CSS/헝거게임메인.css
+++ b/CSS/헝거게임메인.css
@@ -49,7 +49,7 @@ header ul{
 
 header a{
     font-size: 35px;
-    width: 250px;
+    width: 300px;
     height: 100%;
     text-align: center;
     color: black;
@@ -75,12 +75,11 @@ header a{
 
 .police-line {
     position: absolute;
-    top: 0;
+    top: -300px;
     left: 0;
     width: 100%;
-    height: 100%; /* 부모 높이에 맞게 설정 */
+    height: 400%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
-    object-fit: cover; /* 이미지 비율 유지 */
 }
 
 .title-text {
@@ -131,14 +130,7 @@ header a{
 }
 
 .mainH1{
-    /* font-family: 'NanumSquareLight'; */
-    /* font-family: 'NanumSquare'; */
-    /* font-family: 'NanumSquareBold'; */
-    /* font-family: 'NanumSquareExtraBold'; */
     font-family: 'NanumSquareAcb';
-    /* font-family: 'NanumSquareAceb'; */
-    /* font-family: 'NanumSquareAcl'; */
-    /* font-family: 'NanumSquareAcr'; */
     font-size: 2em;
     letter-spacing: 2px;
 }
@@ -171,7 +163,7 @@ header li>a:hover{
 #settingH2{
     display: flex;
     justify-content: center;
-    margin: 150px 0;
+    margin: 100px 0;
     font-size: 60px;
 }
 
@@ -216,4 +208,10 @@ header li>a:hover{
 .file-name {
     font-size: 14px;
     color: #555;
+}
+
+.mainText{
+    width: 2000px;
+    font-size: 50px;
+    margin: auto;
 }
