--- a/CSS/헝거게임캐릭터.css
+++ b/CSS/헝거게임캐릭터.css
@@ -48,7 +48,7 @@ header ul{
 
 header a{
     font-size: 35px;
-    width: 250px;
+    width: 300px;
     height: 100%;
     text-align: center;
     color: black;
@@ -222,5 +222,10 @@ header li>a:hover{
     zoom: 2.0;
 }
 
-
+.mainText{
+    width: 1600px;
+    margin: auto;
+    font-size: 50px;
+    font-family: NanumSquareAcb;
+}
 
