--- a/CSS/ERMain.css
+++ b/CSS/ERMain.css
@@ -4,19 +4,19 @@ body{
 
 main{
     width: max-content;
-    height: 2400px;
+    height: 2000px;
     margin:auto;
     background-color: rgb(223, 199, 168);
     box-sizing: border-box;
 }
 
-header{
+header {
     width: 100%;
     height: 100px;
     display: flex;
-    position:sticky;
+    position: sticky;
     top: 0;
-    z-index: 10000;
+    z-index: 1000; /* 최우선으로 배치 */
     background: #F6F5EF;
 }
 
@@ -24,6 +24,8 @@ h1{
     text-align: center;
     font-weight: bold;
     font-size: 65px;
+    padding-bottom: 100px;
+    padding-top: 100px;
 }
 
 
@@ -31,13 +33,14 @@ h1{
     width: 100%;
     height: 100px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: row;
     align-items: center;
+    cursor: pointer;
 }
 
 header ul{
-    width: 100%;
+    justify-content: center;
     display: flex;
     list-style: none;
     height: 100%;
@@ -62,40 +65,46 @@ header a{
     transition-duration: 0.1s;
 }
 
-
-
 .police-container {
     position: relative;
     width: 100%;
     height: 200px; /* 부모 컨테이너 높이 설정 */
-    margin: 100px 0px;
-
+    margin: 300px 0px;
 }
 
 .police-line {
     position: absolute;
-    top: 0;
+    top: -100px;
     left: 0;
     width: 100%;
-    height: 100%; /* 부모 높이에 맞게 설정 */
+    height: 200%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
-    object-fit: cover; /* 이미지 비율 유지 */
 }
 
 .title-text {
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
-    font-size: 65px;
+    font-size: 80px;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     text-align: center;
 }
 
-#start{
+.mainH1 h1 {
+    position: relative;
+    z-index: 1; /* 이미지보다 아래에 나타남 */
+    color: white;
+    font-size: 120px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    font-weight: bold;
+}
+
+
+#startGame{
     width: 300px;
     height: 100px;
     background: #4185b3;
@@ -104,33 +113,25 @@ header a{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 200px;
+    cursor: pointer;
 }
 
-#start>a{
+#startGame>a{
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
-/* 
 
-span{
-    color: #e6e6e6;
-    padding-top: 8px;
-} */
+.mainH1>a{
+    text-decoration: none;
+    color: rgb(17, 60, 250);
+}
 
-#outline{
-    /* font-family: 'NanumSquareLight'; */
-    /* font-family: 'NanumSquare'; */
-    /* font-family: 'NanumSquareBold'; */
-    /* font-family: 'NanumSquareExtraBold'; */
+.mainH1{
     font-family: 'NanumSquareAcb';
-    /* font-family: 'NanumSquareAceb'; */
-    /* font-family: 'NanumSquareAcl'; */
-    /* font-family: 'NanumSquareAcr'; */
-    font-size: 40px;
+    font-size: 2em;
     letter-spacing: 2px;
-    line-height: 32px;
-    text-align: center;
-    padding: 130px;
 }
 
 header li:hover{
@@ -144,78 +145,72 @@ header li>a:hover{
     transition-duration: 0.7s;
 }
 
-#modifyHead{
-    margin: 100px;
-}
-
-.tableClass{
-    font-size: 30px;
-    height: "300px";
-    width: "900px";
-}
-
-.tableClass>th{
-    padding: 40px;
-    font-size: 40px;
-}
-
-#modifierTable{
-    display: flex;
-    justify-content: center;
-}
-
-
-[type=checkbox]{
-    zoom:5.0;
-}
-
-[type=number]{
-    zoom:3.0;
-}
-
-#saveBtn{
-    height: 300px;
-    display: flex;
-}
-
-#save, #load{
-    width: 300px;
-    height: 100px;
-    margin: auto;
-    background: #4185b3;
-    border-radius: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-#save2>a{
-    text-decoration: none;
-    color: black;
-}
-
-#ERModifier{
+#ERMain{
     background-color: #333333;
     color: rgb(255, 255, 255);
 }
 
-.mainText{
-    width: 1600px;
+
+#setting{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     margin: auto;
     font-size: 50px;
-    font-family: NanumSquareAcb;
+}
+
+#settingH2{
+    display: flex;
+    justify-content: center;
+    margin: 100px 0;
+    font-size: 60px;
 }
 
 
-/* 
-#myProfile{
+[type=file]{
+    zoom: 2.5;
+}
+
+#settingChar{
     display: none;
 }
-#logoutBtn{
+#settingEvent{
     display: none;
-} */
+}
+#settingModifier{
+    display: none;
+}
 
-/* #login{
-    display: none;
-} */
+/* 파일 업로드 버튼 스타일 */
+.file-upload-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0px;
+}
+
+.upload-btn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 30px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.upload-btn:hover {
+    background-color: #45a049;
+}
+
+.file-name {
+    font-size: 14px;
+    color: #555;
+}
+
+.mainText{
+    width: 2000px;
+    font-size: 50px;
+    margin: auto;
+}
