--- a/CSS/ERCharacters.css
+++ b/CSS/ERCharacters.css
@@ -2,6 +2,8 @@ body{
     background-color: rgb(223, 199, 168);
 }
 
+
+
 main{
     width: max-content;
     height: 2000px;
@@ -10,13 +12,13 @@ main{
     box-sizing: border-box;
 }
 
-header {
+header{
     width: 100%;
     height: 100px;
     display: flex;
-    position: sticky;
+    position:sticky;
     top: 0;
-    z-index: 1000; /* 최우선으로 배치 */
+    z-index: 10000;
     background: #F6F5EF;
 }
 
@@ -24,8 +26,6 @@ h1{
     text-align: center;
     font-weight: bold;
     font-size: 65px;
-    padding-bottom: 100px;
-    padding-top: 100px;
 }
 
 
@@ -33,14 +33,13 @@ h1{
     width: 100%;
     height: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     flex-direction: row;
     align-items: center;
-    cursor: pointer;
 }
 
 header ul{
-    justify-content: center;
+    width: 100%;
     display: flex;
     list-style: none;
     height: 100%;
@@ -65,20 +64,20 @@ header a{
     transition-duration: 0.1s;
 }
 
+
 .police-container {
     position: relative;
     width: 100%;
     height: 200px; /* 부모 컨테이너 높이 설정 */
-    margin: 100px 0px;
-
+    margin-bottom: 400px;
+    margin-top: 200px;
 }
 
 .police-line {
     position: absolute;
-    top: -300px;
     left: 0;
     width: 100%;
-    height: 400%; /* 부모 높이에 맞게 설정 */
+    height: 200%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
 }
 
@@ -88,51 +87,47 @@ header a{
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
-    font-size: 65px;
+    font-size: 120px;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     text-align: center;
 }
 
-.mainH1 h1 {
-    position: relative;
-    z-index: 1; /* 이미지보다 아래에 나타남 */
-    color: white;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-    font-size: 65px;
-    font-weight: bold;
+#saveBtn{
+    height: 300px;
+    display: flex;
 }
 
-
-#startGame{
+#save, #load{
     width: 300px;
     height: 100px;
-    background: #4185b3;
     margin: auto;
+    background: #4185b3;
     border-radius: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
     cursor: pointer;
 }
 
-#startGame>a{
+#start>a{
     text-decoration: none;
     color: black;
-    cursor: pointer;
 }
 
-.mainH1>a{
-    text-decoration: none;
-    color: rgb(17, 60, 250);
-}
-
-.mainH1{
+pre{
+    /* font-family: 'NanumSquareLight'; */
+    /* font-family: 'NanumSquare'; */
+    /* font-family: 'NanumSquareBold'; */
+    /* font-family: 'NanumSquareExtraBold'; */
     font-family: 'NanumSquareAcb';
-    font-size: 2em;
+    /* font-family: 'NanumSquareAceb'; */
+    /* font-family: 'NanumSquareAcl'; */
+    /* font-family: 'NanumSquareAcr'; */
+    font-size: 30px;
     letter-spacing: 2px;
+    line-height: 32px;
 }
 
 header li:hover{
@@ -146,72 +141,88 @@ header li>a:hover{
     transition-duration: 0.7s;
 }
 
-#ERMain{
+#ERChar{
     background-color: #333333;
     color: rgb(255, 255, 255);
 }
 
 
-#setting{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+
+#addChar{
     margin: auto;
-    font-size: 50px;
 }
 
-#settingH2{
+#addBtn{
     display: flex;
-    justify-content: center;
-    margin: 100px 0;
-    font-size: 60px;
-}
-
-
-[type=file]{
-    zoom: 2.5;
-}
-
-#settingChar{
-    display: none;
-}
-#settingEvent{
-    display: none;
-}
-#settingModifier{
-    display: none;
-}
-
-/* 파일 업로드 버튼 스타일 */
-.file-upload-container {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 50px 0px;
 }
 
-.upload-btn {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+#addCharacter{
+    display: flex;
+    justify-content: center;
+    
+}
+
+#characterRowContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    max-width: 1600px; /* 고정된 범위 */
+    width: 1600px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.characterRowContainer2 {
+    display: flex;
+    flex-direction: column;
+    width: 23%; /* 한 줄에 두 개씩 배치되도록 설정 */
+    margin: 1%;
+    border: 1px solid #ddd;
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #f9f9f9;
+}
+
+.characterRow {
+    display: flex;
+    flex-direction: column;
     font-size: 30px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
 }
 
-.upload-btn:hover {
-    background-color: #45a049;
+.previewImage {
+    display: none;
+    width: 220px;
+    height: 220px;
+    margin-top: 10px;
+    object-fit: cover;
+    border: 1px solid #ddd;
 }
 
-.file-name {
-    font-size: 14px;
-    color: #555;
+#addChar{
+    margin-top: 50px;
+    zoom: 3.0;
+}
+
+.characterRow>button{
+    zoom: 2.0;
+}
+
+.characterRow input{
+    zoom: 1.5;
+}
+
+.characterRow select{
+    zoom: 2.0;
 }
 
 .mainText{
-    width: 2000px;
-    font-size: 50px;
+    width: 1600px;
     margin: auto;
+    font-size: 50px;
+    font-family: NanumSquareAcb;
 }
+
