--- a/CSS/EREvents.css
+++ b/CSS/EREvents.css
@@ -67,27 +67,25 @@ header a{
     position: relative;
     width: 100%;
     height: 200px; /* 부모 컨테이너 높이 설정 */
-    margin: 100px 0px;
-
+    margin-bottom: 400px;
+    margin-top: 200px;
 }
 
 .police-line {
     position: absolute;
-    top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* 부모 높이에 맞게 설정 */
+    height: 200%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
-    object-fit: cover; /* 이미지 비율 유지 */
 }
 
 .title-text {
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
-    font-size: 65px;
+    font-size: 120px;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
