--- a/CSS/ERModifiers.css
+++ b/CSS/ERModifiers.css
@@ -2,11 +2,9 @@ body{
     background-color: rgb(223, 199, 168);
 }
 
-
-
 main{
     width: max-content;
-    height: 2000px;
+    height: 2400px;
     margin:auto;
     background-color: rgb(223, 199, 168);
     box-sizing: border-box;
@@ -70,31 +68,100 @@ header a{
     position: relative;
     width: 100%;
     height: 200px; /* 부모 컨테이너 높이 설정 */
-    margin: 100px 0px;
-
+    margin-bottom: 400px;
+    margin-top: 200px;
 }
 
 .police-line {
     position: absolute;
-    top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* 부모 높이에 맞게 설정 */
+    height: 200%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
-    object-fit: cover; /* 이미지 비율 유지 */
 }
 
 .title-text {
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
-    font-size: 65px;
+    font-size: 120px;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     text-align: center;
+}
+
+#start{
+    width: 300px;
+    height: 100px;
+    background: #4185b3;
+    margin: auto;
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#start>a{
+    text-decoration: none;
+    color: black;
+}
+/* 
+
+span{
+    color: #e6e6e6;
+    padding-top: 8px;
+} */
+
+#outline{
+    font-family: 'NanumSquareAcb';
+    font-size: 40px;
+    letter-spacing: 2px;
+    line-height: 32px;
+    text-align: center;
+    padding: 130px;
+}
+
+header li:hover{
+    background-color: #333333;
+    color: rgb(255, 255, 255);
+    transition-duration: 0.7s;
+}
+
+header li>a:hover{
+    color: rgb(255, 255, 255);
+    transition-duration: 0.7s;
+}
+
+#modifyHead{
+    margin: 100px;
+}
+
+.tableClass{
+    font-size: 30px;
+    height: "300px";
+    width: "900px";
+}
+
+.tableClass>th{
+    padding: 40px;
+    font-size: 40px;
+}
+
+#modifierTable{
+    display: flex;
+    justify-content: center;
+}
+
+
+[type=checkbox]{
+    zoom:5.0;
+}
+
+[type=number]{
+    zoom:3.0;
 }
 
 #saveBtn{
@@ -114,112 +181,14 @@ header a{
     cursor: pointer;
 }
 
-#start>a{
+#save2>a{
     text-decoration: none;
     color: black;
 }
 
-pre{
-    /* font-family: 'NanumSquareLight'; */
-    /* font-family: 'NanumSquare'; */
-    /* font-family: 'NanumSquareBold'; */
-    /* font-family: 'NanumSquareExtraBold'; */
-    font-family: 'NanumSquareAcb';
-    /* font-family: 'NanumSquareAceb'; */
-    /* font-family: 'NanumSquareAcl'; */
-    /* font-family: 'NanumSquareAcr'; */
-    font-size: 30px;
-    letter-spacing: 2px;
-    line-height: 32px;
-}
-
-header li:hover{
+#ERModifier{
     background-color: #333333;
     color: rgb(255, 255, 255);
-    transition-duration: 0.7s;
-}
-
-header li>a:hover{
-    color: rgb(255, 255, 255);
-    transition-duration: 0.7s;
-}
-
-#ERChar{
-    background-color: #333333;
-    color: rgb(255, 255, 255);
-}
-
-
-
-#addChar{
-    margin: auto;
-}
-
-#addBtn{
-    display: flex;
-    align-items: center;
-}
-
-#addCharacter{
-    display: flex;
-    justify-content: center;
-    
-}
-
-#characterRowContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: flex-start;
-    max-width: 1600px; /* 고정된 범위 */
-    width: 1600px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.characterRowContainer2 {
-    display: flex;
-    flex-direction: column;
-    width: 23%; /* 한 줄에 두 개씩 배치되도록 설정 */
-    margin: 1%;
-    border: 1px solid #ddd;
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: #f9f9f9;
-}
-
-.characterRow {
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-}
-
-.previewImage {
-    display: none;
-    width: 220px;
-    height: 220px;
-    margin-top: 10px;
-    object-fit: cover;
-    border: 1px solid #ddd;
-}
-
-#addChar{
-    margin-top: 50px;
-    zoom: 3.0;
-}
-
-.characterRow>button{
-    zoom: 2.0;
-}
-
-.characterRow input{
-    zoom: 1.5;
-}
-
-.characterRow select{
-    zoom: 2.0;
 }
 
 .mainText{
@@ -229,3 +198,15 @@ header li>a:hover{
     font-family: NanumSquareAcb;
 }
 
+
+/* 
+#myProfile{
+    display: none;
+}
+#logoutBtn{
+    display: none;
+} */
+
+/* #login{
+    display: none;
+} */
