--- a/CSS/EREvents.css
+++ b/CSS/EREvents.css
@@ -1,22 +1,19 @@
 body{
     background-color: rgb(223, 199, 168);
+    margin: 0;
 }
 
 main{
-    width: max-content;
-    height: 2000px;
     margin:auto;
     background-color: rgb(223, 199, 168);
     box-sizing: border-box;
 }
 
 header{
-    width: 100%;
-    height: 100px;
     display: flex;
     position:sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 10000;
     background: #F6F5EF;
 }
 
@@ -45,8 +42,8 @@ header ul{
 
 
 header a{
-    font-size: 35px;
-    width: 300px;
+    font-size: 1.4em;
+    width: 180px;
     height: 100%;
     text-align: center;
     color: black;
@@ -67,25 +64,23 @@ header a{
     position: relative;
     width: 100%;
     height: 200px; /* 부모 컨테이너 높이 설정 */
-    margin-bottom: 400px;
-    margin-top: 200px;
 }
 
 .police-line {
     position: absolute;
     left: 0;
     width: 100%;
-    height: 200%; /* 부모 높이에 맞게 설정 */
+    height: 100%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
 }
 
 .title-text {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
-    font-size: 120px;
+    font-size: 3em;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
@@ -109,14 +104,7 @@ header a{
 }
 
 pre{
-    /* font-family: 'NanumSquareLight'; */
-    /* font-family: 'NanumSquare'; */
-    /* font-family: 'NanumSquareBold'; */
-    /* font-family: 'NanumSquareExtraBold'; */
     font-family: 'NanumSquareAcb';
-    /* font-family: 'NanumSquareAceb'; */
-    /* font-family: 'NanumSquareAcl'; */
-    /* font-family: 'NanumSquareAcr'; */
     font-size: 20px;
     letter-spacing: 2px;
     line-height: 32px;
@@ -284,8 +272,8 @@ input[type="checkbox"] {
 }
 
 .mainText{
-    width: 1600px;
-    margin: auto;
-    font-size: 50px;
+    font-size: 1.5em;
+    margin: 100px 0;
+    text-align: center;
     font-family: NanumSquareAcb;
 }
