--- a/CSS/ERMain.css
+++ b/CSS/ERMain.css
@@ -6,7 +6,6 @@ body{
 
 main{
     width: 100%;
-    height: 2000px;
     margin:auto;
     background-color: rgb(223, 199, 168);
     box-sizing: border-box;
@@ -23,13 +22,6 @@ header {
     background: #F6F5EF;
 }
 
-h1{
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px;
-    padding-bottom: 100px;
-    padding-top: 100px;
-}
 
 
 #header-id1{
@@ -70,7 +62,7 @@ header a{
     position: relative;
     width: 100%;
     height: 150px; /* 부모 컨테이너 높이 설정 */
-    margin: 150px 0px;
+    margin: 150px 0px 80px 0;
 }
 
 .police-line {
@@ -78,13 +70,13 @@ header a{
     top: -80px;
     left: 0;
     width: 100%;
-    height: 200%; /* 부모 높이에 맞게 설정 */
+    height: 150%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
 }
 
 .title-text {
     position: absolute;
-    top: 50%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
@@ -96,7 +88,7 @@ header a{
     position: relative;
     z-index: 1; /* 이미지보다 아래에 나타남 */
     color: white;
-    font-size: 120px;
+    font-size: 2em;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     font-weight: bold;
 }
@@ -106,12 +98,11 @@ header a{
     width: 300px;
     height: 100px;
     background: #4185b3;
-    margin: auto;
+    margin: 100px auto;
     border-radius: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
     cursor: pointer;
 }
 
@@ -120,6 +111,11 @@ header a{
     color: black;
     cursor: pointer;
 }
+
+#startGame>h1{
+    font-size: 1.2em;
+}
+
 
 .mainH1>a{
     text-decoration: none;
@@ -154,14 +150,14 @@ header li>a:hover{
     justify-content: center;
     flex-direction: column;
     margin: auto;
-    font-size: 50px;
+    font-size: 2em;
 }
 
 #settingH2{
     display: flex;
     justify-content: center;
     margin: 100px 0;
-    font-size: 60px;
+    font-size: 2.2em;
 }
 
 
@@ -208,7 +204,5 @@ header li>a:hover{
 }
 
 .mainText{
-    width: 2000px;
-    font-size: 50px;
-    margin: auto;
+    text-align: center;
 }
