--- a/CSS/ERModifiers.css
+++ b/CSS/ERModifiers.css
@@ -1,18 +1,15 @@
 body{
     background-color: rgb(223, 199, 168);
+    margin: 0;
 }
 
 main{
-    width: max-content;
-    height: 2400px;
     margin:auto;
     background-color: rgb(223, 199, 168);
     box-sizing: border-box;
 }
 
 header{
-    width: 100%;
-    height: 100px;
     display: flex;
     position:sticky;
     top: 0;
@@ -45,8 +42,8 @@ header ul{
 
 
 header a{
-    font-size: 35px;
-    width: 300px;
+    font-size: 1.4em;
+    width: 180px;
     height: 100%;
     text-align: center;
     color: black;
@@ -63,30 +60,27 @@ header a{
 }
 
 
-
 .police-container {
     position: relative;
     width: 100%;
     height: 200px; /* 부모 컨테이너 높이 설정 */
-    margin-bottom: 400px;
-    margin-top: 200px;
 }
 
 .police-line {
     position: absolute;
     left: 0;
     width: 100%;
-    height: 200%; /* 부모 높이에 맞게 설정 */
+    height: 100%; /* 부모 높이에 맞게 설정 */
     z-index: 1; /* 텍스트보다 아래 */
 }
 
 .title-text {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1; /* 이미지 뒤에 표시되도록 설정 */
-    font-size: 120px;
+    font-size: 3em;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
@@ -140,14 +134,12 @@ header li>a:hover{
 }
 
 .tableClass{
-    font-size: 30px;
     height: "300px";
     width: "900px";
 }
 
 .tableClass>th{
     padding: 40px;
-    font-size: 40px;
 }
 
 #modifierTable{
@@ -157,11 +149,11 @@ header li>a:hover{
 
 
 [type=checkbox]{
-    zoom:5.0;
+    zoom:2.0;
 }
 
 [type=number]{
-    zoom:3.0;
+    zoom:2.0;
 }
 
 #saveBtn{
@@ -192,9 +184,10 @@ header li>a:hover{
 }
 
 .mainText{
-    width: 1600px;
+    font-size: 1.6em;
     margin: auto;
-    font-size: 50px;
+    text-align: center;
+    margin: 100px 0;
     font-family: NanumSquareAcb;
 }
 
