--- a/CSS/ERMyProfile.css
+++ b/CSS/ERMyProfile.css
@@ -1,10 +1,9 @@
 body{
     background-color: rgb(223, 199, 168);
+    margin: 0;
 }
 
 main{
-    width: max-content;
-    height: 2000px;
     margin:auto;
     background-color: rgb(223, 199, 168);
     box-sizing: border-box;
